# Offline_voice_interaction_system

./: README.md  tts.rar
nano-vllm-main/: audio_process.py  example.py  main.exp  main.lib  new_audio_server.py
nano-vllm-main/nano_vllm.egg-info/: PKG-INFO
nano-vllm-main/nanovllm/: config.py
nano-vllm-main/nanovllm/engine/: block_manager.py  model_runner.py
nano-vllm-main/nanovllm/layers/: embed_head.py  linear.py
nano-vllm-main/nanovllm/models/: qwen3.py
voice/: CMakeLists.txt  Makefile  README_CPP.md  audio_main.cpp  audio_monitor.cpp  audio_monitor.h  build.sh  globals.h  install_dependencies_cpp.sh  start_monitor_cpp.sh
